# isaac

./: .gitignore  Dockerfile  Pipfile  README.md  docker-compose.yml  docker-entrypoint.sh  manage.py  pyproject.toml  pytest.ini  req.txt
accounts/: admin.py  login_session.py  models.py  sso.py  tests.py  views.py
accounts/migrations/: 0001_initial.py  0002_auto_20201109_1229.py
apps/dooray/: admin.py  apps.py  collect_dooray.py  mail_template.html  models.py  tasks.py  urls.py  views.py
apps/dooray/templates/: _mail_template.html  mail_template.html  wtrs.html
apps/problem/: urls.py  views.py
apps/problem/templates/problem/: main.html
apps/project/: urls.py  views.py
apps/project/templates/project/: main.html
apps/resources/: admin.py  models.py
apps/testcase/: admin.py  ajax.py  models.py  urls.py  views.py
apps/testcase/migrations/: 0001_initial.py  0002_auto_20201109_1235.py  0003_auto_20201109_1618.py  0004_auto_20201109_1704.py
apps/testcase/templates/testcase/: main copy 2.html  main copy.html  main.html  main_orgin.html  testcase.html
apps/testing/: urls.py  views.py
apps/testing/templates/testing/: main.html
config/nginx/: nginx.conf
isaac/: asgi.py  settings.py  urls.py  wsgi.py
isaac_project/: __init__.py  admin.py  celery.py  cron_job.py  db.py  filters.py  jinja2_filters.py  settings.py  sso.py  urls.py  views.py  wsgi.py
isaac_project/tests/: test_urls.py
static/css/: testcase.css
static/js/: testcase.js
templates/: 404.html  base.html  login.html  nav.html  no_member.html
