[tool.poetry]
name = "isaac"
version = "0.1.0"
description = ""
authors = ["taeju.kim <iam@taeju.kim>"]

[tool.poetry.dependencies]
python = "^3.8"
Django = "3.1.5"
bs4 = "^0.0.1"
django-extensions = "^3.1.0"
gunicorn = "^20.0.4"
requests = "^2.25.1"
pandas = "^1.2.0"
pytest = "^6.2.1"
pytest-django = "^4.1.0"
pytest-cov = "^2.11.0"
ipython = "^7.19.0"
openpyxl = "^3.0.6"
celery = "4.4.7"
django-celery-beat = "^2.2.0"
django-celery-results = "^2.0.0"
SQLAlchemy = "^1.3.22"
PyAMQP = "^0.1.0"
mysqlclient = "^2.0.3"

[tool.poetry.dev-dependencies]
notebook = "^6.2.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
